tests/sumo/pedestrian_model/striping/errors/route_invalid_permissions/errors.sumo
Error: Person 'p0' could not find sidewalk on edge 'end', time=0.00.
Quitting (on error).
